k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softwarewala-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: softwarewala.net
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: softwarewala-service
                port:
                  number: 80
